--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,9 +1,32 @@
+@import "~bootstrap/scss/bootstrap";
 @import "vars";
 
-body {
-    background-color: $secondary-color;
+/*! Search Filter */
+.text-filters {
+  text-transform: uppercase;
+  font-size: 12px;
 }
 
-a {
-    color: $warm-color;
+.text-brands {
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: bolder;
+  color: #ea8b2e;
 }
+
+.text-promo, .text-promo:hover {
+  text-transform: uppercase;
+  font-size: 26px;
+  font-weight: bolder;
+  color: #ffffff;
+  text-decoration: none;
+  background-color: #ea8b2e;
+}
+
+.text-small, .text-small:hover {
+  color: #000000;
+  text-decoration: none;
+}
+
+
+
