--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,9 +1,4 @@
 @import "vars";
+@import "~bootstrap/scss/bootstrap";
 
-body {
-    background-color: $secondary-color;
-}
 
-a {
-    color: $warm-color;
-}
