refactoring functions, controllers, show products filters

--- a/templates/catalog/index.html.twig
+++ b/templates/catalog/index.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello CatalogController!{% endblock %}
-
 {% block body %}
+
+    {% include 'catalog/filter.html.twig' %}
 
     <div class="container-fluid mt-3">
         <form class="form-inline">
