get top product

--- a/templates/catalog/index.html.twig
+++ b/templates/catalog/index.html.twig
@@ -4,91 +4,19 @@
 
     {% include 'catalog/filter.html.twig' %}
 
-    <div class="container-fluid mt-3">
-        <form class="form-inline">
-            <input class="form-control mr-sm-2" style ="color: orangered" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-danger my-2 my-sm-0"type="submit">Search</button>
-        </form>
-    </div>
-
-
-    <div class="container-fluid card-group mt-5" style="text-align: center">
-        <div class="card mr-3">
-            <img class="card-img-top" src="https://via.placeholder.com/150X90C/O https://placeholder.com/"
-                 alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                    content. This content is a little bit longer.</p>
-            </div>
-            <div class="card-footer">
-                <small class="text-muted">Last updated 3 mins ago</small>
-            </div>
-        </div>
-        <div class="card mr-3">
-            <img class="card-img-top" src="https://via.placeholder.com/150X90C/O https://placeholder.com/"
-                 alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            </div>
-            <div class="card-footer">
-                <small class="text-muted">Last updated 3 mins ago</small>
-            </div>
-        </div>
-        <div class="card mr-3">
-            <img class="card-img-top" src="https://via.placeholder.com/150X90C/O https://placeholder.com/"
-                 alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                    content. This card has even longer content than the first to show that equal height action.</p>
-            </div>
-            <div class="card-footer">
-                <small class="text-muted">Last updated 3 mins ago</small>
-            </div>
+    <div class="container-fluid">
+        {% for product in productsTop %}
+        <div class="card-deck">
+                <div class="card">
+                    <img src="http://via.placeholder.com/150x100" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                    </div>
+                </div>
+            {% endfor %}
         </div>
     </div>
 
-    <div class=" container-fluid card-group mt-5" style="text-align: center">
-        <div class="card mr-3">
-            <img class="card-img-top" src="https://via.placeholder.com/150X90C/O https://placeholder.com/"
-                 alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                    content. This content is a little bit longer.</p>
-            </div>
-            <div class="card-footer">
-                <small class="text-muted">Last updated 3 mins ago</small>
-            </div>
-        </div>
-        <div class="card mr-3">
-            <img class="card-img-top" src="https://via.placeholder.com/150X90C/O https://placeholder.com/"
-                 alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            </div>
-            <div class="card-footer">
-                <small class="text-muted">Last updated 3 mins ago</small>
-            </div>
-        </div>
-        <div class="card mr-3">
-            <img class="card-img-top" src="https://via.placeholder.com/150X90C/O https://placeholder.com/"
-                 alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                    content. This card has even longer content than the first to show that equal height action.</p>
-            </div>
-            <div class="card-footer">
-                <small class="text-muted">Last updated 3 mins ago</small>
-            </div>
-        </div>
-    </div>
-
-    <div class="container-fluid mt-5" style="text-align: center">
-        <button type="button" class="btn btn-lg btn-outline-danger">VOIR PLUS DE PRODUITS</button>
-    </div>
 {% endblock %}
