--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,4 +1,6 @@
-@import "vars";
+@import "~bootstrap/scss/bootstrap";
+@import "_vars";
+@import "_header.scss";
 
 body {
     background-color: $secondary-color;
