--- a/templates/catalog/index.html.twig
+++ b/templates/catalog/index.html.twig
@@ -29,7 +29,8 @@
                                                 <li class="list-group-item">{{ supplierName }}</li>
                                             {% endfor %}
                                             {% for urlProduct in product.url_product %}
-                                                <li class="list-group-item"><a href="{{ urlProduct }}">Acceder au produit</a></li>
+                                                <li class="list-group-item"><a href="{{ urlProduct }}">Acceder au
+                                                        produit</a></li>
                                             {% endfor %}
                                         </ul>
                                     </div>
