--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,3 +1,7 @@
+// Main colors custom bootstrap
+$primary: #ff6a00;
+
+// the ~ allows you to reference things in node_modules
 @import "~bootstrap/scss/bootstrap";
 
 // the ~ allows you to reference things in node_modules
