--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,7 +35,7 @@
             </ul>
             <form class="form-inline">
                 <input class="form-control mr-sm-2" type="search" placeholder="Rechercher..." aria-label="Search">
-                <button class="btn btn-outline-warning my-2 my-sm-0" type="submit"><i class="fas fa-search"></i>
+                <button class="btn btn-outline-primary my-2 my-sm-0" type="submit"><i class="fas fa-search"></i>
                 </button>
             </form>
         </div>
