--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -33,3 +33,22 @@ $primary: #ff6a00;
   color: #000000;
   text-decoration: none;
 }
+
+/*! Catalog card product*/
+.main-card-product {
+  text-align: center;
+  h5 {
+    font-size: 18px;
+    font-weight: 600;
+  }
+  p {
+    font-size: 14px;
+  }
+  li:first-child {
+    font-size: 20px;
+    font-weight: 600;
+  }
+  li:last-child {
+    font-weight: 600;
+  }
+}
