--- a/templates/catalog/index.html.twig
+++ b/templates/catalog/index.html.twig
@@ -9,17 +9,17 @@
                     <div class="card-deck">
                         {% for product in productsTop %}
                             <div class="col-4">
-                                <div class="card mt-3 mb-5">
+                                <div class="main-card-product card mt-3 mb-5 w-75">
                                     {% for urlImage in product.url_image %}
-                                        <img src="{{ urlImage }}" class="card-img-top" alt="...">
+                                        <img src="{{ urlImage }}" class="w-auto h-auto img-fluid card-img-top img-thumbnail" alt="product top">
                                     {% endfor %}
                                     <div class="card-body">
-                                        <p class="card-text">Top {{ product.ranking }}</p>
                                         {% for name in product.display_name %}
-                                            <h5 class="card-title">{{ name }}</h5>
+                                            <h5 class="card-title">{{ name | slice(0, 25) | upper }}...</h5>
                                         {% endfor %}
+                                        <p class="card-subtitle mt-1 mb-2"><i class="fas fa-arrow-up"></i> Top {{ product.ranking }}</p>
                                         {% for description in product.description %}
-                                            <p class="card-text">{{ description }}...</p>
+                                            <p class="card-text">{{ description | slice(0, 100) }}...</p>
                                         {% endfor %}
                                         <ul class="list-group list-group-flush">
                                             {% for price in product.display_price %}
