--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -17,16 +17,13 @@ $primary: #ff6a00;
   text-transform: uppercase;
   font-size: 14px;
   font-weight: bolder;
-  color: #ea8b2e;
 }
 
 .text-promo, .text-promo:hover {
   text-transform: uppercase;
   font-size: 26px;
   font-weight: bolder;
-  color: #ffffff;
   text-decoration: none;
-  background-color: #ea8b2e;
 }
 
 .text-small, .text-small:hover {
@@ -37,6 +34,7 @@ $primary: #ff6a00;
 /*! Catalog card product*/
 .main-card-product {
   text-align: center;
+  font-family: sans-serif;
   h5 {
     font-size: 18px;
     font-weight: 600;
