--- a/templates/catalog/filter.html.twig
+++ b/templates/catalog/filter.html.twig
@@ -1,53 +1,55 @@
 {% block body %}
+    <div class="ml-4 d-flex flex-column" style="width: 18%">
+        <p class="text-filters"><i class="fas fa-sort-down fa-2x"></i> Filtres</p>
+        {# Brand block #}
+        <div class="card">
+            <div class="card-header">
+                <p class="text-brands text-primary">Marques</p>
+                <hr>
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <div class="d-flex flex-column">
+                            {% for productByBrand in productsByBrand %}
+                                {% for brand in productByBrand.buckets | slice (1, 2) %}
+                                    <label>
+                                        <input type="checkbox"> {{ brand.value }}
+                                    </label>
+
+                                {% endfor %}
+                            {% endfor %}
+                        </div>
+                    </div>
+                </div>
+                <small class="text-muted"><a class="text-small" href="#">Voir plus</a></small>
+                <hr>
+            </div>
+        </div>
+        {# Promotion block #}
+        <div class="card">
             <hr>
-            <p class="text-filters"><i class="fas fa-sort-down fa-2x"></i> Filtres</p>
-            {# Brand block #}
-            <div class="card">
-                <div class="card-header">
-                    <p class="text-brands">Marques</p>
-                    <hr>
-                    <div class="input-group mb-3">
-                        <div class="input-group-prepend">
-                            <div class="d-flex flex-column">
-                                {% for productByBrand in productsByBrand %}
-                                    {% for brand in productByBrand.buckets | slice (1, 2) %}
-                                        <input type="checkbox">
-                                        {{ brand.value }}
-                                    {% endfor %}
+            <a class="mx-auto mt-4 mb-4 text-promo text-primary" href="#">PROMOTIONS !</a>
+            <hr>
+        </div>
+        {# Supplier block #}
+        <div class="card">
+            <div class="card-header">
+                <p class="text-brands text-primary">Fournisseurs</p>
+                <hr>
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <div class="d-flex flex-column">
+                            {% for productBySupplier in productsBySupplier %}
+                                {% for supplier in productBySupplier | slice (6) %}
+                                    <label>
+                                        <input type="checkbox"> {{ supplier.value }}
+                                    </label>
                                 {% endfor %}
-                            </div>
+                            {% endfor %}
                         </div>
                     </div>
-                    <small class="text-muted"><a class="text-small" href="#">Voir plus</a></small>
-                    <hr>
                 </div>
-            </div>
-            {# Promotion block #}
-            <div class="card">
+                <small class="text-muted"><a class="text-small" href="#">Voir plus</a></small>
                 <hr>
-                <a class="mx-auto mt-4 mb-4 text-promo" href="#">PROMOTIONS !</a>
-                <hr>
-            </div>
-            {# Supplier block #}
-            <div class="card">
-                <div class="card-header">
-                    <p class="text-brands">Fournisseurs</p>
-                    <hr>
-                    <div class="input-group mb-3">
-                        <div class="input-group-prepend">
-                            <div class="d-flex flex-column">
-                                {% for productBySupplier in productsBySupplier %}
-                                    {% for supplier in productBySupplier | slice (6) %}
-                                        <input type="checkbox">
-                                        {{ supplier.value }}
-                                    {% endfor %}
-                                {% endfor %}
-                            </div>
-                        </div>
-                    </div>
-                    <small class="text-muted"><a class="text-small" href="#">Voir plus</a></small>
-                    <hr>
-                </div>
             </div>
         </div>
     </div>
