update price no rebate

--- a/templates/catalog/filter.html.twig
+++ b/templates/catalog/filter.html.twig
@@ -1,5 +1,6 @@
 {% block body %}
-    <div class="ml-4 d-flex flex-column" style="width: 18%">
+    <div class="mt-2 ml-4 d-flex flex-column" style="width: 18%">
+        <a class="line-catalog" href="{{ path('catalog_home') }}">Catalogue</a>
         <p class="text-filters"><i class="fas fa-sort-down fa-2x"></i> Filtres</p>
         {# Brand block #}
         <div class="card">
