--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -40,27 +40,38 @@ $primary: #ff6a00;
   cursor: pointer;
 }
 
+.line-catalog, .line-catalog:hover {
+  text-decoration: none;
+  font-size: 14px;
+}
+
 /*! Catalog card product*/
 .main-card-product {
   text-align: center;
   font-family: sans-serif;
+
   h5 {
     font-size: 18px;
     font-weight: 600;
   }
+
   p {
     font-size: 14px;
   }
+
   li:first-child {
     font-size: 16px;
     font-weight: 600;
   }
+
   li:last-child {
     font-weight: 600;
   }
+
   .price {
     font-size: 13px;
   }
+
   .price-promo {
     font-size: 16px;
     font-weight: bold;
