--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -77,4 +77,11 @@ $primary: #ff6a00;
     font-weight: bold;
     color: #e30f1b;
   }
+
+  .card-img-catalog {
+    width: 100%;
+    height: 20vw;
+    object-fit: cover;
+  }
+
 }
