--- a/templates/catalog/filter.html.twig
+++ b/templates/catalog/filter.html.twig
@@ -10,12 +10,14 @@
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <div class="d-flex flex-column">
-                            {% for productByBrand in productsByBrand %}
-                                {% for brand in productByBrand.buckets | slice (1, 2) %}
-                                    <label class="list-filter">
-                                        <input type="checkbox"> {{ brand.value }}
-                                    </label>
-                                {% endfor %}
+                            {% for brand in brands %}
+                                {% if brand.buckets is defined %}
+                                    {% for brand in productByCriteria.buckets | slice (1, 2) %}
+                                        <label class="list-filter">
+                                            <input type="checkbox"> {{ brand.value }}
+                                        </label>
+                                    {% endfor %}
+                                {% endif %}
                             {% endfor %}
                         </div>
                     </div>
@@ -38,13 +40,13 @@
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <div class="d-flex flex-column">
-                            {% for productBySupplier in productsBySupplier %}
-                                {% for supplier in productBySupplier | slice (6) %}
-                                    <label class="list-filter">
-                                        <input type="checkbox"> {{ supplier.value }}
-                                    </label>
-                                {% endfor %}
-                            {% endfor %}
+                            {#                            {% for productBySupplier in productsBySupplier %}#}
+                            {#                                {% for supplier in productBySupplier | slice (6) %}#}
+                            {#                                    <label class="list-filter">#}
+                            {#                                        <input type="checkbox"> {{ supplier.value }}#}
+                            {#                                    </label>#}
+                            {#                                {% endfor %}#}
+                            {#                            {% endfor %}#}
                         </div>
                     </div>
                 </div>
