--- a/templates/catalog/index.html.twig
+++ b/templates/catalog/index.html.twig
@@ -9,17 +9,21 @@
                     {% for product in productsTop %}
                         <div class="col-4">
                             <div class="main-card-product card mt-5 mb-5 w-75">
-                                {% for urlImage in product.url_image %}
-                                    <img src="{{ urlImage }}"
-                                         class="w-auto img-fluid card-img-top img-thumbnail"
-                                         alt="product top">
-                                {% endfor %}
+                                {% if product.url_image is defined %}
+                                    {% for urlImage in product.url_image %}
+                                        <img src="{{ urlImage }}"
+                                             class="w-auto img-fluid card-img-top img-thumbnail"
+                                             alt="product top">
+                                    {% endfor %}
+                                {% endif %}
                                 <div class="card-body">
                                     {% for name in product.display_name %}
                                         <h5 class="card-title">{{ name | slice(0, 25) | upper }}...</h5>
                                     {% endfor %}
-                                    <p class="card-subtitle mt-1 mb-2"><i class="fas fa-arrow-up"></i>
-                                        Top {{ product.ranking }}</p>
+                                    {% if product.ranking is defined %}
+                                        <p class="card-subtitle mt-1 mb-2"><i class="fas fa-arrow-up"></i>
+                                            Top {{ product.ranking }}</p>
+                                    {% endif %}
                                     {% for description in product.description %}
                                         <p class="card-text">{{ description | slice(0, 100) }}...</p>
                                     {% endfor %}
@@ -41,8 +45,7 @@
                                             <li class="list-group-item">{{ supplierName }}</li>
                                         {% endfor %}
                                         {% for urlProduct in product.url_product %}
-                                            <li class="list-group-item"><a href="{{ urlProduct }}">Acceder au
-                                                    produit</a></li>
+                                            <li class="list-group-item"><a href="{{ urlProduct }}">Acceder au produit</a></li>
                                         {% endfor %}
                                     </ul>
                                 </div>
