--- a/templates/catalog/filter.html.twig
+++ b/templates/catalog/filter.html.twig
@@ -11,13 +11,9 @@
                     <div class="input-group-prepend">
                         <div class="d-flex flex-column">
                             {% for brand in brands %}
-                                {% if brand.buckets is defined %}
-                                    {% for brand in productByCriteria.buckets | slice (1, 2) %}
-                                        <label class="list-filter">
-                                            <input type="checkbox"> {{ brand.value }}
-                                        </label>
-                                    {% endfor %}
-                                {% endif %}
+                                <label class="list-filter">
+                                    <input type="checkbox"> {{ brand.value }}
+                                </label>
                             {% endfor %}
                         </div>
                     </div>
@@ -40,13 +36,11 @@
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <div class="d-flex flex-column">
-                            {#                            {% for productBySupplier in productsBySupplier %}#}
-                            {#                                {% for supplier in productBySupplier | slice (6) %}#}
-                            {#                                    <label class="list-filter">#}
-                            {#                                        <input type="checkbox"> {{ supplier.value }}#}
-                            {#                                    </label>#}
-                            {#                                {% endfor %}#}
-                            {#                            {% endfor %}#}
+                            {% for supplier in suppliers %}
+                                <label class="list-filter">
+                                    <input type="checkbox"> {{ supplier.value }}
+                                </label>
+                            {% endfor %}
                         </div>
                     </div>
                 </div>
