--- a/templates/catalog/index.html.twig
+++ b/templates/catalog/index.html.twig
@@ -4,7 +4,9 @@
     <div class="container-fluid mt-4">
         <div class="d-flex">
             <div class="row">
-                {% include 'catalog/filter.html.twig' %}
+                {% if form.vars.value.search is defined %}
+                    {% include 'catalog/filter.html.twig' %}
+                {% endif %}
                 <div class="d-flex card-deck mt-4 pl-3" style="width: 80%">
                     {% for product in productsTop %}
                         <div class="col-4">
@@ -45,7 +47,8 @@
                                             <li class="list-group-item">{{ supplierName }}</li>
                                         {% endfor %}
                                         {% for urlProduct in product.url_product %}
-                                            <li class="list-group-item"><a href="{{ urlProduct }}">Acceder au produit</a></li>
+                                            <li class="list-group-item"><a href="{{ urlProduct }}">Acceder au
+                                                    produit</a></li>
                                         {% endfor %}
                                     </ul>
                                 </div>
