filter product dynamic

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -45,6 +45,10 @@ $primary: #ff6a00;
   font-size: 14px;
 }
 
+.select-filter {
+  font-size: 12px;
+}
+
 /*! Catalog card product*/
 .main-card-product {
   text-align: center;
