--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -88,4 +88,10 @@ $primary: #ff6a00;
     object-fit: cover;
   }
 
+  /*! Detail product page*/
+
+  a, a:hover {
+    color: inherit;
+    text-decoration: none;
+  }
 }
