--- a/templates/catalog/index.html.twig
+++ b/templates/catalog/index.html.twig
@@ -11,47 +11,49 @@
                     {% for product in productsTop %}
                         <div class="col-4">
                             <div class="main-card-product card mt-5 mb-5 w-75">
-                                {% if product.url_image is defined %}
-                                    {% for urlImage in product.url_image %}
-                                        <img src="{{ urlImage }}"
-                                             class="w-auto img-fluid card-img-catalog img-thumbnail"
-                                             alt="product top">
-                                    {% endfor %}
-                                {% endif %}
-                                <div class="card-body">
-                                    {% for name in product.display_name %}
-                                        <h5 class="card-title">{{ name | slice(0, 25) | upper }}...</h5>
-                                    {% endfor %}
-                                    {% if product.ranking is defined %}
-                                        <p class="card-subtitle mt-1 mb-2"><i class="fas fa-arrow-up"></i>
-                                            Top {{ product.ranking }}</p>
+                                <a href="{{ path('catalog_product_show', { 'id': product.product_id[0] }) }}">
+                                    {% if product.url_image is defined %}
+                                        {% for urlImage in product.url_image %}
+                                            <img src="{{ urlImage }}"
+                                                 class="w-auto img-fluid card-img-catalog img-thumbnail"
+                                                 alt="product top">
+                                        {% endfor %}
                                     {% endif %}
-                                    {% for description in product.description %}
-                                        <p class="card-text">{{ description | slice(0, 100) }}...</p>
-                                    {% endfor %}
-                                    <ul class="list-group list-group-flush">
-                                        {% for price in product.price %}
-                                            {% for pricePromo in product.promo %}
-                                                {% if pricePromo != 0 %}
-                                                    <li class="list-group-item">
-                                                    {% for priceNoRebate in product.price_no_rebate %}
-                                                        <del class="price">{{ priceNoRebate }} €</del><span
-                                                            class="price-promo"> {{ price }} €</span></li>
-                                                    {% endfor %}
-                                                {% else %}
-                                                    <li class="list-group-item">{{ price }} €</li>
-                                                {% endif %}
+                                    <div class="card-body">
+                                        {% for name in product.display_name %}
+                                            <h5 class="card-title">{{ name | slice(0, 25) | upper }}...</h5>
+                                        {% endfor %}
+                                        {% if product.ranking is defined %}
+                                            <p class="card-subtitle mt-1 mb-2"><i class="fas fa-arrow-up"></i>
+                                                Top {{ product.ranking }}</p>
+                                        {% endif %}
+                                        {% for description in product.description %}
+                                            <p class="card-text">{{ description | slice(0, 100) }}...</p>
+                                        {% endfor %}
+                                        <ul class="list-group list-group-flush">
+                                            {% for price in product.price %}
+                                                {% for pricePromo in product.promo %}
+                                                    {% if pricePromo != 0 %}
+                                                        <li class="list-group-item">
+                                                        {% for priceNoRebate in product.price_no_rebate %}
+                                                            <del class="price">{{ priceNoRebate }} €</del><span
+                                                                class="price-promo"> {{ price }} €</span></li>
+                                                        {% endfor %}
+                                                    {% else %}
+                                                        <li class="list-group-item">{{ price }} €</li>
+                                                    {% endif %}
+                                                {% endfor %}
                                             {% endfor %}
-                                        {% endfor %}
-                                        {% for supplierName in product.supplier_name %}
-                                            <li class="list-group-item">{{ supplierName }}</li>
-                                        {% endfor %}
-                                        {% for urlProduct in product.url_product %}
-                                            <li class="list-group-item"><a href="{{ urlProduct }}">Acceder au
-                                                    produit</a></li>
-                                        {% endfor %}
-                                    </ul>
-                                </div>
+                                            {% for supplierName in product.supplier_name %}
+                                                <li class="list-group-item">{{ supplierName }}</li>
+                                            {% endfor %}
+                                            {% for urlProduct in product.url_product %}
+                                                <li class="list-group-item"><a href="{{ urlProduct }}">Acceder au
+                                                        produit</a></li>
+                                            {% endfor %}
+                                        </ul>
+                                    </div>
+                                </a>
                             </div>
                         </div>
                     {% endfor %}
