--- a/templates/catalog/show.html.twig
+++ b/templates/catalog/show.html.twig
@@ -3,14 +3,70 @@
 {% block body %}
     <div class="container-fluid mt-4">
         <div class="d-flex">
-            <div class="row">
-                <div class="card" style="width: 18rem;">
-                    {% for urlImage in product.url_image %}
-                    <img src="{{ urlImage }}"
-                         class="w-auto img-fluid card-img-top img-thumbnail"
-                         alt="product top">
-                    {% endfor %}
+            <div class="d-flex flex-column">
+                <div class="row">
+                    <div class="offset-md-4"></div>
+                    <div class="col-md-4">
+                        <div class="card" style="width: 26rem;">
+                            {% for urlImage in product.url_image %}
+                                <img src="{{ urlImage }}"
+                                     class="w-auto img-fluid card-img-top img-thumbnail"
+                                     alt="product top">
+                            {% endfor %}
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="d-flex justify-content-around w-50">
+{#                        <div class="offset-md-2"></div>#}
+                        <div class="card">
+                            <div class="">
+                                <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">This is a longer card with supporting text below as a natural
+                                        lead-in
+                                        to additional content. This content is a little bit longer.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="">
+                                <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">This is a longer card with supporting text below as a natural
+                                        lead-in
+                                        to additional content. This content is a little bit longer.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="">
+                                <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">This is a longer card with supporting text below as a natural
+                                        lead-in
+                                        to additional content.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="">
+                                <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">This is a longer card with supporting text below as a natural
+                                        lead-in
+                                        to additional content.</p>
+                                </div>
+                            </div>
+                        </div>
+{#                        <div class="offset-md-2"></div>#}
+                    </div>
                 </div>
             </div>
         </div>
+    </div>
 {% endblock %}
